[gd_scene load_steps=3 format=2]

[ext_resource path="res://ArenaArea.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 40 )

[node name="ArenaArea" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )
cameraPath = NodePath("../Camera2D")

[node name="TriggerArea" type="CollisionShape2D" parent="."]
position = Vector2( 176, 96 )
shape = SubResource( 1 )

[node name="ArenaLimits" type="Node" parent="."]

[node name="TopLeft" type="Position2D" parent="ArenaLimits"]

[node name="BotRight" type="Position2D" parent="ArenaLimits"]
position = Vector2( 320, 184 )

[node name="ArenaBlockers" type="Node" parent="."]

[node name="ArenaSpawners" type="Node" parent="."]

[node name="WaveCooldown" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_ArenaArea_body_entered"]
[connection signal="timeout" from="WaveCooldown" to="." method="_on_WaveCooldown_timeout"]
